<resources>
  <string name="app_name">Test</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>
  <string name="title_activity_main">MainActivity</string>
    <string name="menu_home">Map</string>
  <string name="menu_gallery">List</string>
  <string name="menu_slideshow">Info</string>
  <string name="menu_tools">Tools</string>
  <string name="menu_share">Share</string>
  <string name="action_start">Start</string>
  <string name="action_stop">Stop</string>
  <string name="menu_send">Send</string>
</resources>
