<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/mobile_navigation"
  app:startDestination="@+id/nav_maps">

  <fragment
    android:id="@+id/nav_maps"
    android:name="com.pashaz.tests.ui.map.HomeFragment"
    android:label="@string/menu_home"
    tools:layout="@layout/fragment_home" />

  <fragment
    android:id="@+id/nav_list"
    android:name="com.pashaz.tests.ui.list.ListFragment"
    android:label="@string/menu_gallery"
    tools:layout="@layout/fragment_list" />

  <fragment
    android:id="@+id/nav_info"
    android:name="com.pashaz.tests.ui.info.InfoFragment"
    android:label="@string/menu_slideshow"
    tools:layout="@layout/fragment_info" />

  <fragment
    android:id="@+id/nav_tools"
    android:name="com.pashaz.tests.ui.tools.ToolsFragment"
    android:label="@string/menu_tools"
    tools:layout="@layout/fragment_tools" />

  <fragment
    android:id="@+id/nav_share"
    android:name="com.pashaz.tests.ui.share.ShareFragment"
    android:label="@string/menu_share"
    tools:layout="@layout/fragment_share" />

  <fragment
    android:id="@+id/nav_send"
    android:name="com.pashaz.tests.ui.send.SendFragment"
    android:label="@string/menu_send"
    tools:layout="@layout/fragment_send" />
</navigation>
